# NLWeb

./: .gitignore  pyproject.toml
code/: chatbot_interface.py  requirements.txt
code/config/: config_llm.yaml  config_retrieval.yaml
code/core/: baseHandler.py
code/embedding/: openai_embedding.py
code/pre_retrieval/: relevance_detection.py
code/tools/: db_load.py  rss2schema.py  sample_claude_config.json
code/utils/: utils.py
code/webserver/: WebServer.py
data/db/collection/nlweb_collection/: storage.sqlite
static/: news_interface.html  news_renderer.js
