[project]
name = "nlweb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.1",
    "anthropic>=0.18.1",
    "azure-ai-inference>=1.0.0b9",
    "azure-core>=1.30.0",
    "azure-identity>=1.15.0",
    "azure-search-documents>=11.4.0",
    "chardet>=5.2.0",
    "feedparser>=6.0.1",
    "google-cloud-aiplatform>=1.38.0",
    "google-genai>=0.7.1",
    "httpx>=0.28.1",
    "jsonschema>=4.19.1",
    "marshmallow<4.0.0",
    "mcp>=1.0.0",
    "openai>=1.12.0",
    "packaging>=16.8,<24",
    "protobuf>=3.20,<5",
    "pymilvus>=1.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "qdrant-client>=1.14.0",
]
